index.html updates

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <!-- can change primary page color -->
-  <meta name="description" content="Web site created using create-react-app" />
-  <!-- change content to description of page -->
+  <meta name="description" content="Adam Spiegel Portfolio created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
